<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFFF"
    tools:context=".Doctor.DoctorRegister"
    app:layout_constraintGuide_percent="0.5">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/doctorBackToLoginButton"
        style="@style/backButton"
        android:layout_width="80dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0225"
        app:layout_constraintHorizontal_bias="0.065" />

    <ImageView
        android:id="@+id/docAppointLogo"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:src="@drawable/whitelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        />

    <TextView
        android:id="@+id/doctorSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_signup"
        android:textColor="@color/main"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/backdrop"
        android:layout_width="328dp"
        android:layout_height="435dp"
        android:background="@drawable/backdrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        />

    <EditText
        android:id="@+id/doctorFirstName"
        style="@style/textField"
        android:autofillHints="name"
        android:hint="@string/firstName"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <EditText
        android:id="@+id/doctorLastName"
        style="@style/textField"
        android:autofillHints="name"
        android:hint="@string/lastName"
        android:inputType="text"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3275" />

    <Button
        android:id="@+id/doctorSpecialtiesButton"
        style="@style/AllButtons"
        android:text="@string/specialties"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"/>

    <EditText
        android:id="@+id/doctorEmployeeNumber"
        style="@style/textField"
        android:hint="@string/employee_number"
        android:inputType="text"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4425" />

    <EditText
        android:id="@+id/doctorAddress"
        style="@style/textField"
        android:autofillHints="postalAddress"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/doctorPhoneNumber"
        style="@style/textField"
        android:autofillHints="phone"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5575"
        />

    <EditText
        android:id="@+id/doctorEmail"
        style="@style/textField"
        android:autofillHints="phone"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <EditText
        android:id="@+id/doctorPassword"
        style="@style/textField"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6725"
        />

    <EditText
        android:id="@+id/confirmPasswordDoctor"
        style="@style/textField"
        android:autofillHints="password"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/createDoctorAccountButton"
        style="@style/AllButtons"
        android:text="@string/createAccount"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/doctorRegisterAutoCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AUTO"
        app:layout_constraintBottom_toBottomOf="@+id/createDoctorAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createDoctorAccountButton"
        app:layout_constraintTop_toTopOf="@+id/createDoctorAccountButton" />


</androidx.constraintlayout.widget.ConstraintLayout>