<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrator.AdminNavigation"
    android:background="#F0EFFF"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/adminName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="-5dp"
        android:text="Name"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/patientLogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="700dp"
        android:src="@drawable/whitelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/doctorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="-10dp"
        android:text="Doctor"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pfp"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/profilepicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/pendingVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="10dp"
        android:text="Patient Account Information"
        android:textColor="@color/main"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backdrop"
        android:layout_width="328dp"
        android:layout_height="320dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/backdrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/patientApprovalFirstNameTextDoc"
        style="@style/textField"
        android:layout_marginStart="72dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="name"
        android:hint="@string/firstName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/patientApprovalLastNameTextDoc"
        style="@style/textField"
        android:layout_marginStart="72dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/lastName"
        android:inputType="text"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/patientApprovalHealthCardNumberTextDoc"
        style="@style/textField"
        android:layout_marginStart="72dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/healthCardNumber"
        android:inputType="text"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/patientApprovalAddressTextDoc"
        style="@style/textField"
        android:layout_marginStart="72dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="postalAddress"
        />

    <EditText
        android:id="@+id/patientApprovalPhoneNumberTextDoc"
        style="@style/textField"
        android:layout_marginStart="72dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:textColor="@color/text_box_text"
        android:textColorHint="#9B9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="phone"
        />

    <EditText
        android:id="@+id/patientApprovalEmailTextDoc"
        style="@style/textField"
        android:layout_marginStart="72dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="username|emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#9B9B9B"
        android:textColorHint="@color/text_box_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/patientApprovalDenyRequestButtonDoc"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/redbutton"
        android:text="Cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/patientApprovalBackButtonDoc"
        style="@style/backButton"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="632dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>